--- a/Cocoon/Views/Partials/WebsiteNavbar.cshtml
+++ b/Cocoon/Views/Partials/WebsiteNavbar.cshtml
@@ -169,7 +169,7 @@
             <li><i class="@(culture == "ar" ? "fa fa-shopping-basket" : "")"></i> <a href="@Url.Action("Index", "Orders")">@(culture == "ar" ? "طلباتى" : "My Orders") <i class="@(culture != "ar" ? "fa fa-shopping-basket" : "")"></i></a></li>
             <li><i class="@(culture == "ar" ? "fas fa-wallet" : "")"></i> <a href="@Url.Action("Index","Wallets")">@(culture == "ar" ? "محفظتى" : "My Wallet")</a> <i class="@(culture != "ar" ? "fas fa-wallet" : "")"></i></li>
             <li><i class="@(culture == "ar" ? "fas fa-bell" : "")"></i> <a href="@Url.Action("All", "Notifications")">@Website.Notifications</a> <i class="@(culture != "ar" ? "fas fa-bell" : "")"></i></li>
-            <li><i class="@(culture == "ar" ? "fas fa-question-circle" : "")"></i> <a href="@Url.Action("Index", "FAQs")">@Website.FAQs</a> <i class="@(culture != "ar" ? "fas fa-question-circle" : "")"></i></li>
+            @*<li><i class="@(culture == "ar" ? "fas fa-question-circle" : "")"></i> <a href="@Url.Action("Index", "FAQs")">@Website.FAQs</a> <i class="@(culture != "ar" ? "fas fa-question-circle" : "")"></i></li>*@
             <li><i class="@(culture == "ar" ? "fas fa-sign-out-alt" : "")"></i> <a href="javascript:document.getElementById('logoutForm').submit()">@Website.Logout</a> <i class="@(culture != "ar" ? "fas fa-sign-out-alt" : "")"></i></li>
         </ul>
         @*<i class="fas fa-chevron-up User close-icon"></i>*@
