--- a/Cocoon/Views/SupplierProducts/Dashboard.cshtml
+++ b/Cocoon/Views/SupplierProducts/Dashboard.cshtml
@@ -31,11 +31,6 @@
                                     <span class="badge bg-red pt-5 pb-5">القسم الرئيسى محذوف</span>
                                     <br /><br />
                                 }
-                                @if (Service.SubCategory.Category.IsDeleted == true)
-                                {
-                                    <span class="badge bg-red pt-5 pb-5">القسم الرئيسى محذوف</span>
-                                    <br /><br />
-                                }
                                 @if (Service.Offers != null && Service.Offers.Count(d => d.IsDeleted == false && d.IsFinished == false) > 0)
                                 {
                                     <span class="badge bg-green pt-5 pb-5">يوجد عرض نشط</span>
@@ -43,8 +38,7 @@
                                 @Service.NameAr
                             </td>
                             <td>
-                                @Service.SubCategory.NameAr <br />
-                                @Service.SubCategory.Category.NameAr
+                                @Service.SubCategory.NameAr
                             </td>
                             <td>
                                 @Service.OriginalPrice ريال سعودي
