--- a/Cocoon/Views/Partials/WebsiteFooter.cshtml
+++ b/Cocoon/Views/Partials/WebsiteFooter.cshtml
@@ -93,39 +93,7 @@
     </style>
 }
 <footer class="text-@(culture == "ar" ? "right" : "left")">
-    <section class="u-white py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 col-md-4 feature-item mb-1">
-                    <div class="feature-item__content">
-                        <div class="feature-item__icon">
-                            <i class="fas fa-shopping-bag" style="font-size:35px;margin:20px"></i>
-                            <h3> ⭐️جودة بضائعنا وخدماتنا⭐️ </h3>
-                        </div>
-                        <p> ✨نضمن لكم جودة السلع وتميزها✨ </p>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4 feature-item mb-1">
-                    <div class="feature-item__content">
-                        <div class="feature-item__icon">
-                            <i class="fas fa-money-check-alt" style="font-size:35px;margin:20px"></i>
-                            <h3> ⭐️أسعارنا المنافسة⭐️ </h3>
-                        </div>
-                        <p> ✨نضمن لكم السعر الأقل والمنافس✨ </p>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4 feature-item mb-1">
-                    <div class="feature-item__content">
-                        <div class="feature-item__icon">
-                            <i class="fas fa-cart-plus" style="font-size:35px;margin:20px"></i>
-                            <h3> ⭐️التوصيل السريع⭐️ </h3>
-                        </div>
-                        <p> ✨نضمن لكم سرعة التوصيل✨ </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    
     <div class="container">
         <div class="row">
             <div class="col-sm-6 col-md-3 col-lg-3">
@@ -133,8 +101,8 @@
                 <br />
                 <ul>
                     <li><a href="@Url.Action("About", "Home")">@(culture == "ar" ? "نبذة عن G4Fit" : "About G4Fit")</a></li>
-                    <li><a href="@Url.Action("Index", "Privacy")">@(culture == "ar" ? "سياسة الخصوصية" : "Privacy policy")</a></li>
-                    <li><a href="@Url.Action("Index", "DeliveryRules")">@(culture == "ar" ? "شروط التوصيل" : "Terms of delivery")</a></li>
+                   @* <li><a href="@Url.Action("Index", "Privacy")">@(culture == "ar" ? "سياسة الخصوصية" : "Privacy policy")</a></li>*@
+                  @*  <li><a href="@Url.Action("Index", "DeliveryRules")">@(culture == "ar" ? "شروط التوصيل" : "Terms of delivery")</a></li>*@
                     <li><a href="@Url.Action("Index", "Terms")">@(culture == "ar" ? "الشروط والاحكام" : "Terms and Conditions")</a></li>
                     @*<li><a href="@Url.Action("Affiliate", "Suppliers")">@(culture == "ar" ? "البيع معنا" : "Sell with us")</a></li>
                         <li><a href="@Url.Action("Policy", "Suppliers")">@(culture == "ar" ? "شروط وأحكام البائع" : "Selling Policy")</a></li>*@
@@ -173,7 +141,7 @@
 
 
             </div>-->
-            <div class="col-sm-6 col-md-3 col-lg-3">
+            @*<div class="col-sm-6 col-md-3 col-lg-3">
                 <h6 class="mt-2" style="font-weight:bold">@(culture == "ar" ? "تواصل مع الدعم الفنى" : "Contact technical support")</h6>
                 <br />
                 <ul>
@@ -182,7 +150,7 @@
                     <li><a href="@Url.Action("Index", "HowTo")">@(culture == "ar" ? "كيفية الطلب" : "How to order")</a></li>
                     <li><a href="@Url.Action("Index", "Informations")">@(culture == "ar" ? "التعليمات" : "Instructions")</a></li>
                 </ul>
-            </div>
+            </div>*@
             <div class="col-sm-6 col-md-3 col-lg-3">
                 <h6 class="mt-2" style="font-weight:bold">@(culture == "ar" ? "اتصل بنا" : "Contact us")</h6>
                 <br />
