--- a/Cocoon/Views/Orders/Details.cshtml
+++ b/Cocoon/Views/Orders/Details.cshtml
@@ -201,7 +201,7 @@
                                         case G4Fit.Models.Enums.PaymentMethod.Cash:
                                             <span>الدفع كاش</span>
                                             break;
-                                        case G4Fit.Models.Enums.PaymentMethod.Online:
+                                        case G4Fit.Models.Enums.PaymentMethod.UrWay:
                                             <span>الدفع اون لاين - يور واي</span>
                                             break;
                                         case G4Fit.Models.Enums.PaymentMethod.Tabby:
