--- a/Cocoon/Views/Orders/Dashboard.cshtml
+++ b/Cocoon/Views/Orders/Dashboard.cshtml
@@ -56,7 +56,7 @@
                                 {
                                     <span>الدفع كاش</span><br />
                                 }
-                                else if (order.PaymentMethod == G4Fit.Models.Enums.PaymentMethod.Online)
+                                else if (order.PaymentMethod == G4Fit.Models.Enums.PaymentMethod.UrWay)
                                 {
                                     <span>الدفع اون لاين - يور واي</span><br />
                                 }
@@ -91,7 +91,7 @@
                                     {
                                         <a class="btn btn-@(order.IsPaid == true ? "danger" : "success")" style="margin-bottom:10px" href="@Url.Action("TogglePaid", new { OrderId = order.Id })">@(order.IsPaid == false ? "تعيين تم الدفع" : "تعيين لم يتم الدفع")</a>
                                     }
-                                    @if (order.PaymentMethod == G4Fit.Models.Enums.PaymentMethod.Online)
+                                    @if (order.PaymentMethod == G4Fit.Models.Enums.PaymentMethod.UrWay)
                                     {
                                         <a class="btn btn-primary" style="margin-bottom:10px" href="@Url.Action("TransactionHistory", new { OrderId = order.Id })">سجل عمليات الدفع</a>
                                     }
