--- a/Cocoon/Views/Services/Create.cshtml
+++ b/Cocoon/Views/Services/Create.cshtml
@@ -167,7 +167,7 @@
                                 </div>
                             </div>
 
-                            <div class="row" id="Features-container" style="margin:10px;">
+                            @*<div class="row" id="Features-container" style="margin:10px;">
                                 <hr />
                                 <div class="col-lg-12 text-danger mb-15">
                                     <h4>&bull; مواصفات الخدمه</h4>
@@ -198,7 +198,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div>*@
 
                             <button type="submit" class="btn btn-success" id="add-Service-btn">اضافه الخدمه <i class="fa fa-spinner fa-spin" id="loader" style="display:none;"></i></button>
                         }
