--- a/Cocoon/Views/Partials/WebsiteFooter.cshtml
+++ b/Cocoon/Views/Partials/WebsiteFooter.cshtml
@@ -93,16 +93,16 @@
     </style>
 }
 <footer class="text-@(culture == "ar" ? "right" : "left")">
-    
+
     <div class="container">
         <div class="row">
             <div class="col-sm-6 col-md-3 col-lg-3">
                 <h6 class="mt-2" style="font-weight:bold">@(culture == "ar" ? "معلومات الشركة" : "About Company")</h6>
                 <br />
                 <ul>
-                    <li><a href="@Url.Action("About", "Home")">@(culture == "ar" ? "نبذة عن G4Fit" : "About G4Fit")</a></li>
-                   @* <li><a href="@Url.Action("Index", "Privacy")">@(culture == "ar" ? "سياسة الخصوصية" : "Privacy policy")</a></li>*@
-                  @*  <li><a href="@Url.Action("Index", "DeliveryRules")">@(culture == "ar" ? "شروط التوصيل" : "Terms of delivery")</a></li>*@
+                    <li><a href="@Url.Action("Index", "about")">@(culture == "ar" ? "نبذة عن G4Fit" : "About G4Fit")</a></li>
+                    @* <li><a href="@Url.Action("Index", "Privacy")">@(culture == "ar" ? "سياسة الخصوصية" : "Privacy policy")</a></li>*@
+                    @*  <li><a href="@Url.Action("Index", "DeliveryRules")">@(culture == "ar" ? "شروط التوصيل" : "Terms of delivery")</a></li>*@
                     <li><a href="@Url.Action("Index", "Terms")">@(culture == "ar" ? "الشروط والاحكام" : "Terms and Conditions")</a></li>
                     @*<li><a href="@Url.Action("Affiliate", "Suppliers")">@(culture == "ar" ? "البيع معنا" : "Sell with us")</a></li>
                         <li><a href="@Url.Action("Policy", "Suppliers")">@(culture == "ar" ? "شروط وأحكام البائع" : "Selling Policy")</a></li>*@
@@ -142,15 +142,15 @@
 
             </div>-->
             @*<div class="col-sm-6 col-md-3 col-lg-3">
-                <h6 class="mt-2" style="font-weight:bold">@(culture == "ar" ? "تواصل مع الدعم الفنى" : "Contact technical support")</h6>
-                <br />
-                <ul>
-                    <li><a href="@Url.Action("Index", "Exchange")">@(culture == "ar" ? "سياسة الاسترجاع والاستبدال" : "Return Policy")</a></li>
-                    <li><a href="@Url.Action("Index", "CustomerSupport")">@(culture == "ar" ? "خدمة العملاء" : "Customers Service")</a></li>
-                    <li><a href="@Url.Action("Index", "HowTo")">@(culture == "ar" ? "كيفية الطلب" : "How to order")</a></li>
-                    <li><a href="@Url.Action("Index", "Informations")">@(culture == "ar" ? "التعليمات" : "Instructions")</a></li>
-                </ul>
-            </div>*@
+                    <h6 class="mt-2" style="font-weight:bold">@(culture == "ar" ? "تواصل مع الدعم الفنى" : "Contact technical support")</h6>
+                    <br />
+                    <ul>
+                        <li><a href="@Url.Action("Index", "Exchange")">@(culture == "ar" ? "سياسة الاسترجاع والاستبدال" : "Return Policy")</a></li>
+                        <li><a href="@Url.Action("Index", "CustomerSupport")">@(culture == "ar" ? "خدمة العملاء" : "Customers Service")</a></li>
+                        <li><a href="@Url.Action("Index", "HowTo")">@(culture == "ar" ? "كيفية الطلب" : "How to order")</a></li>
+                        <li><a href="@Url.Action("Index", "Informations")">@(culture == "ar" ? "التعليمات" : "Instructions")</a></li>
+                    </ul>
+                </div>*@
             <div class="col-sm-6 col-md-3 col-lg-3">
                 <h6 class="mt-2" style="font-weight:bold">@(culture == "ar" ? "اتصل بنا" : "Contact us")</h6>
                 <br />
