--- a/Cocoon/Views/Shared/_Layout.cshtml
+++ b/Cocoon/Views/Shared/_Layout.cshtml
@@ -37,6 +37,16 @@
                 font-weight: 500;
             }
     </style>
+    <script src="https://cdn.tiny.cloud/1/cm697181gs2dmxoi2sgfygjiyj6fbdgtt1f95bidkuubz1ta/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+
+    <!-- Place the following <script> and <textarea> tags in your HTML's <body> -->
+    <script>
+        tinymce.init({
+            selector: 'textarea#tiny',
+            plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount',
+            toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table | align lineheight | numlist bullist indent outdent | emoticons charmap | removeformat',
+        });
+    </script>
 </head>
 <body>
     <div id="fb-root"></div>
