--- a/Cocoon/Views/Suppliers/SellWithUs.cshtml
+++ b/Cocoon/Views/Suppliers/SellWithUs.cshtml
@@ -10,11 +10,11 @@
         {
             <h3>محتوى صفحه البيع معنا باللغة العربية:</h3>
             <br />
-            @Html.TextAreaFor(w => w.ContentAr, new { @class = "rich-text-editor" })
+            @Html.TextAreaFor(w => w.ContentAr, new { id = "tiny" })
             <br />
             <h3>محتوى صفحه البيع معنا باللغة الانجليزية:</h3>
             <br />
-            @Html.TextAreaFor(w => w.ContentEn, new { @class = "rich-text-editor" })
+            @Html.TextAreaFor(w => w.ContentEn, new { id = "tiny" })
 
             <button type="submit" class="btn btn-success">حفظ</button>
         }
